UV editor view does not update view while bake is in progress #37123

Closed
opened 2013-10-17 14:56:07 +02:00 by Alexander N. · 3 comments
Member

%%%--- Operating System, Graphics card ---
windows 7 64bit, i7-3770 CPU/GPU,

- Blender version with error, and version that worked ---

all tested blender version (2.68a, ..., 2.69 RC, ... blender-2.69-r60807-win64.zip), with issue

- Short description of error ---

during bake is in progress, the UV editors view of the texture does not update specially on geometries with one or two faces.
even only one core of the CPU is busy and the other cores are free to be able to trigger/manage updating.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. open attached blend file.

  2. hit "bake" button

  3. wait and watch the texture in the UV editor. (the texture is not updating while bake is in progress)

  4. reopen the same blend file

  5. hit "bake" button

  6. move the border of the UV editor area, while bake is in progress. (the texture is updating as long the UV editor area updates its area, triggered by your mouse movements)

  7. reopen the same blend file

  8. subdivide the plane in smaller parts

  9. hit "bake" button

  10. wait and watch the texture in the UV editor. (the texture is updating while bake is in progress)

(watch also the attached video)%%%

%%%--- Operating System, Graphics card --- windows 7 64bit, i7-3770 CPU/GPU, - Blender version with error, and version that worked --- all tested blender version (2.68a, ..., 2.69 RC, ... blender-2.69-r60807-win64.zip), with issue - Short description of error --- during bake is in progress, the UV editors view of the texture does not update specially on geometries with one or two faces. even only one core of the CPU is busy and the other cores are free to be able to trigger/manage updating. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. open attached blend file. 2. hit "bake" button 3. wait and watch the texture in the UV editor. (the texture is not updating while bake is in progress) 4. reopen the same blend file 5. hit "bake" button 6. move the border of the UV editor area, while bake is in progress. (the texture is updating as long the UV editor area updates its area, triggered by your mouse movements) 7. reopen the same blend file 8. subdivide the plane in smaller parts 9. hit "bake" button 10. wait and watch the texture in the UV editor. (the texture is updating while bake is in progress) (watch also the attached video)%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev60831. Thanks for the report, closing.%%%

%%%Fixed in svn rev60831. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37123
No description provided.